# KnowledgeSolutionCorner

./: .gitignore  COMPANY_LOOKUP_GUIDE.md  DAX_40_ESG_Data_Landscape_Report.md  MVP_README.md  Top_30_ESG_Indikatoren.md  dataland.py  dataland_api_dokumentation.ipynb  dataland_api_dokumentation.md  dax_40.json  dax_40_analysis.ipynb  dax_40_report_generator.ipynb  mvp_pipeline.ipynb  pyproject.toml  requirements.txt
dataland-gui/: .gitignore  DATALAND_API.md  README.md  pyproject.toml  sfdr_MICROSOFT_CORPORATION_2023_all_20251112_141140.json  sfdr_Siemens_Aktiengesellschaft_2023_all_20251112_143636.json  sfdr_Siemens_Aktiengesellschaft_2024_active_20251112_143948.json  sfdr_Siemens_Aktiengesellschaft_all_all_20251112_140924.json  sfdr_Siemens_Energy_AG_2024_active_20251112_144234.json
dataland-gui/src/dataland_gui/: __init__.py  __main__.py  client.py  config.py  webapp.py
dataland-gui/src/dataland_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dataland-gui/src/dataland_gui/blueprints/: companies.py  documents.py  home.py  sfdr.py
dataland-gui/src/dataland_gui/services/: dataland_sfdr_explorer.py  util.py
dataland-gui/src/dataland_gui/static/: app.css
dataland-gui/src/dataland_gui/templates/: base.html  companies.html  documents.html  home.html  sfdr.html
dataland-gui/tests/: conftest.py  test_blueprints.py  test_client.py
dataland-pipeline/: .env.example  .gitignore  README.md  ursprungscode.txt
dax_40_analysis_output/: all_dimensions.csv  company_id_distribution.html  company_lookup_results.json  dax_40_companies.json  (+12 more)
(+24 files in other folders)
